--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   </head>
   <body>
     <header>
-      <nav class="header-menu"></nav>
+      <nav class="header__menu"></nav>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
     </header>
     <main>
       <cover></cover>
