new_text_in_header

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   </head>
   <body>
     <header>
-      <nav class="header__menu"></nav>
+      <nav class="header__menu">
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>главная</li>
+          <li>посмотреть лоты</li>
+          <li>об аукционе</li>
         </ul>
+      </nav>  
     </header>
     <main>
       <cover></cover>
