--- a/index.html
+++ b/index.html
@@ -12,12 +12,32 @@
   <body>
     <header>
       <nav class="header__menu">
-        <ul>
-          <li>главная</li>
-          <li>посмотреть лоты</li>
-          <li>об аукционе</li>
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active" href="#">
+              главная
+            </a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#">
+              посмотреть лоты
+            </a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#">
+              об аукционе
+            </a>
+          </li>
         </ul>
-      </nav>  
+      </nav>
+      <a class="header__logo">
+        <img src="./images/logo-black.svg" class="header__logo-image" alt="логотип 'Оно тебе надо'"/>
+      </a>
+      <address class="address header__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>  
     </header>
     <main>
       <cover></cover>
