--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link header__link_active" href="#">
+            <a class="header__link header__link_active" href="#0">
               главная
             </a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#">
+            <a class="header__link" href="#0">
               посмотреть лоты
             </a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#">
+            <a class="header__link" href="#0">
               об аукционе
             </a>
           </li>
         </ul>
       </nav>
-      <a class="header__logo">
+      <a class="header__logo" href="#0">
         <img src="./images/logo-black.svg" class="header__logo-image" alt="логотип 'Оно тебе надо'"/>
       </a>
       <address class="address header__address">
@@ -40,7 +40,23 @@
       </address>  
     </header>
     <main>
-      <cover></cover>
+      <section class="cover">
+        <div class="overlay">
+          <h1 class="cover__title">
+            <span class="aligned-text">
+              о<span class="letter-spacing-extended">н</span>о</span>
+            <span class="aligned-text_center">
+              те<span class="letter-spacing-extended">б</span>е</span>
+            <span class="aligned-text_right">
+              <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+            </span>
+          </h1>
+          <div class="cover__description">
+            <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+            <button class="bet-button">сделать ставку</button>
+          </div>
+        </div>
+      </section>
       <lots></lots>
       <about></about>
     </main>
