--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     </header>
     <main>
       <section class="cover">
-        <div class="overlay">
+        <div class="overlay"></div>
           <h1 class="cover__title">
-            <span class="aligned-text">
+            <span class="aligned-text aligned-text_left">
               о<span class="letter-spacing-extended">н</span>о</span>
-            <span class="aligned-text_center">
+            <span class="aligned-text aligned-text_center">
               те<span class="letter-spacing-extended">б</span>е</span>
-            <span class="aligned-text_right">
+            <span class="aligned-text aligned-text_right">
               <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
             </span>
           </h1>
@@ -55,7 +55,7 @@
             <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
             <button class="bet-button">сделать ставку</button>
           </div>
-        </div>
+        
       </section>
       <lots></lots>
       <about></about>
