--- a/index.html
+++ b/index.html
@@ -56,48 +56,46 @@
             <button class="bet-button">сделать ставку</button>
           </div>        
       </section>
-      <section class="lots">
-        <h2 class="lots__heading">Лоты</h2>
-        <ul class="lots__card-list">
+      <section class="lots">        
+        <h2 class="lots__heading">Лоты</h2>        
+        <ul class="lots__card-list">          
           <li class="lots__card-list-item">
-            <a class="card-link" href="#">
-              <article class="card card_type_film">
-                <div class="overlay"></div>
-                  <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+            <a class="card-link" href="#0">
+              <div class="overlay"></div>
+              <article class="card card_type_film">                               
+                  <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>                  
                   <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </article>
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link" href="#">
-              <article class="card card_type_book">
-                <div class="overlay"></div>
+            <a class="card-link" href="#0">
+              <div class="overlay"></div>
+              <article class="card card_type_book">                
                   <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-                  <p>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 
+                  <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 
                     16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. 
                     Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
               </article>
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link" href="#">
-              <article class="card card_type_picture">
-                <div class="overlay"></div>
+            <a class="card-link" href="#0">
+              <div class="overlay"></div>
+              <article class="card card_type_picture">                
                   <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-                  <p>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... 
-                    Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                  <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
               </article>
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link" href="#">посмотреть больше</a>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
-      <section class="abouts">         
-        <div class="about__column">
-          <div class="about__logo">
-            <img src="./images/logo-white.svg" alt="Логотип 'Оно тебе надо'" class="about__logo-image">
-          </div>
+      <section class="abouts">       
+        <div class="about__logo">
+          <img src="./images/logo-white.svg" alt="Логотип 'Оно тебе надо'" class="about__logo-image">
         </div>
+        
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
