--- a/index.html
+++ b/index.html
@@ -108,6 +108,46 @@
         </div>     
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <address class="address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link_active" href="#0">
+              главная
+            </a>
+          </li>
+        </ul>
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">
+              посмотреть лоты
+            </a>
+          </li>
+        </ul>
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">
+              об аукционе
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <img src="./images/yt.svg" alt="Ютуб" class="footer__social-link footer__social-icon>
+        </li>
+        <li class="footer__social-list-item">
+          <img src="./images/vk.svg" alt="ВК" class="footer__social-link footer__social-icon>
+        </li>
+        <li class="footer__social-list-item">
+          <img src="./images/pinterest.svg" alt="Пинтерест" class="footer__social-link footer__social-icon>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
