changes in footer

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <img src="./images/yt.svg" alt="Ютуб" class="footer__social-link footer__social-icon>
+          <img src="./images/yt.svg" alt="Ютуб" class="footer__social-link footer__social-icon">
         </li>
         <li class="footer__social-list-item">
-          <img src="./images/vk.svg" alt="ВК" class="footer__social-link footer__social-icon>
+          <img src="./images/vk.svg" alt="ВК" class="footer__social-link footer__social-icon">
         </li>
         <li class="footer__social-list-item">
-          <img src="./images/pinterest.svg" alt="Пинтерест" class="footer__social-link footer__social-icon>
+          <img src="./images/pinterest.svg" alt="Пинтерест" class="footer__social-link footer__social-icon">
         </li>
       </ul>
     </footer>
